[tool.poetry]
name = "gmshparser"
version = "0.2.0"
description = "gmshparser is a lightweight, 100 % tested and well documented package that parses Gmsh ascii file format (.msh)"
authors = ["Jukka Aho <ahojukka5@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.0.0"
black = "^24.3.0"
flake8 = "^6.0.0"
matplotlib = ">=3.5,<3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--cov=gmshparser -v --cov-report=term-missing"
testpaths = [
    "tests",
]
