[tool.poetry]
name = "gmshparser"
version = "0.2.0"
description = "gmshparser is a lightweight, 100 % tested and well documented package that parses Gmsh ascii file format (.msh)"
authors = ["Jukka Aho <ahojukka5@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"
pytest-cov = "^4.0.0"
matplotlib = ">=3.5,<3.11"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.0"
mkdocstrings = {extras = ["python"], version = "^0.26.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--cov=gmshparser -v --cov-report=term-missing"
testpaths = [
    "tests",
]
